objects/tffa__CollateralArrangementConfiguration__c.object
<CustomObject>
    <description>Abstract class to captures collateral configuration applicable at the product level, which includes common configuration attributes such as LTV, maximum amount, maximum age, maximum no of units.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AllowedVehicleCategories__c</fullName>
        <description>List of vehicle categories allowed as part of the collateral config</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowed vehicle categories</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__AllowedVehicleLoanPurpose__c</fullName>
        <description>List of allowed loan purposed for the vehicle as a collateral</description>
        <label>Allowed vehicle loan purpose</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CollateralPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AllowedVehicleMakes__c</fullName>
        <description>List of allowed vehicle makes under the current collateral configuration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowed Vehicle Makes</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__BankDepositType__c</fullName>
        <description>Types of bank deposits allowed as a collateral</description>
        <label>Bank deposit type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__BankDepositType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A summarized description, meant to provide a quick overview about the configuration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if disabled</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsAddOnVehicleSupported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if add on vehicle is supported along with the collateral</description>
        <label>Is add on vehicle supported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsUsedVehicleSupported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if used vehicle is allowed</description>
        <label>Is Used Vehicle Supported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsVehicleCustomizationAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if 3rd party customised vehicle is allowed as a collateral</description>
        <label>Is Vehicle Customization allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MaximumAge__c</fullName>
        <description>Maximum age of the collateral allowed as part of the configuration</description>
        <label>Maximum age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaximumCollateralValue__c</fullName>
        <description>Maximum collateral value allowed as part of the secured loan</description>
        <label>Maximum collateral value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MaximumLoanToValueRatio__c</fullName>
        <description>Maximum ratio of the (outstanding) loan amount to the appraised value, estimated value or purchase price of the collateral</description>
        <label>Maximum Loan to Value (LTV) Ratio</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__MaximumQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Upper bound on quantity of collateral selected in an application.</description>
        <label>Maximum quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaximumVehicleLength__c</fullName>
        <description>Maximum length of the vehicle allowed as part of the collateral configuration</description>
        <label>Maximum vehicle length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaximumVehicleMileage__c</fullName>
        <description>Maximum mileage of the vehicle if loan is being applied for used vehicle</description>
        <label>Maximum vehicle mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__RestrictedVehicleMakes__c</fullName>
        <description>List of restricted vehicle makes under the current collateral configuration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Restricted vehicle makes</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Captures different type of the collateral supported in the system</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CollateralType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__UseAsResidence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the current collateral is used as residence</description>
        <label>Use as residence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__VehicleType__c</fullName>
        <description>Captures different types of the vehicles</description>
        <label>Vehicle type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__VehicleType</valueSetName>
        </valueSet>
    </fields>
    <label>Collateral Arrangement Configuration</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Type__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Arrangement Configuration Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collateral Arrangement Configurations</pluralLabel>
    <recordTypes>
        <fullName>tffa__BANK_DEPOSIT</fullName>
        <active>true</active>
        <description>Bank deposit account used as collateral arrangement to secure the lending application</description>
        <label>Bank Deposit</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__VEHICLE</fullName>
        <active>true</active>
        <description>Vehicle used as a collateral arrangement to secure the lending application</description>
        <label>Vehicle</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>